# awsm-markdown-renderer

./: .gitignore  Cargo.toml  README.md  wrapper.d.ts  wrapper.js
.github/workflows/: ci.yml  publish.yml
assets/: code-highlight.css  syntax.packdump
demos/node-demo/: index.js  package.json
demos/vite-demo/: index.html  main.js  package-lock.json  package.json  vite.config.js
node-demo/: index.js
scripts/: generate_syntax_dump.rs
src/: lib.rs
tests/: error_handling_tests.rs  integration_tests.rs
vite-demo/: main.js  style.css
