[package]
name = "awsm-markdown-renderer"
version = "0.1.0"
edition = "2024"

# [重要] 告诉编译器这是一个动态库，这样才能生成 .wasm 文件
[lib]
crate-type = ["cdylib"] 

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
syntect = { version = "5.3", default-features = false, features = ["html", "plist-load", "regex-fancy"] }
latex2mathml = "0.2"
once_cell = "1.21"
regex = "1"